[tool.poetry]
name = "crawling_project_23"
version = "0.1.0"
description = "The Data Crawler is a Python script designed for web scraping and data extraction. This script is particularly focused on webpages, capturing details like product names, prices, and image URLs. It's built using Python 3, with dependencies on libraries like `lxml`, `requests`, and `pandas`, making it a practical tool for those interested in learning web crawling and scraping techniques."
authors = ["DenKof82 <k.denisas@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.26.0"
lxml = "^4.6.3"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3.0"
isort = "^5.10.0"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
